trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
/* ... */
.activityStreamCtrlHeaderShowImg, .activityStreamCtrlHeaderRefresh, .activityStreamCtrlHeaderPausePlay
{
	cursor: pointer;
}

.activityStreamCtrlHeaderNextRefreshLabel
{
	color: #666666;
	font-size: 10px;
	text-align: right;
}

 .activityStreamCtrlHeaderShowSettingLabel
{
	color: #666666;
	cursor: pointer;
	font-size: 11px;
	padding-right: 5px;
	text-align: right;
}
 

.activityStreamHover, .shareThisDlgNameHover, .groupMembershipNameHover
{
	cursor: pointer;
	background: url(images/blends/teal_slice.png) repeat-x;
	background-position:center;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}
.activityStreamHover span {
	color: #135c8f;
}

.activityStreamCtrlSearchResultsPanel
{
	overflow: auto;
	padding-left: 10px;
	position: relative;
}

.activityStreamTopEntryMainPanel
{
	border-top: 0px solid #d2d5d1;
	padding-right: 5px;
	padding-bottom: 8px;
	padding-left: 0px;
	position: relative;
	margin-top: 8px;
}

.activityStreamCommentMainPanel
{
	border-top: 1px solid #d2d5d1;
	margin-left: 55px;
	margin-top: 10px;
	padding-right: 10px;
	padding-left: 0px;
	position: relative;
}

.activityStreamEntryAuthor
{
	color: #353838;
	display: inline;
	font-size: 11px;
	font-weight: bold;
	padding-right: 6px;
	padding-left: 1px;
	vertical-align: top;
}
.activityStreamEntryAuthor:hover
{
	color: #135c8f;
}
	
.activityStreamEntryDate
{
	font-size: 10px;
	color: #666666;
	display: inline;
	padding-right: 10px;
	white-space: nowrap;
	vertical-align: top;
}

.activityStreamEntryDesc
{
	color: #333333;
	font-size: 12px;
	margin-top: 4px;
	margin-left: 1px;
	position: relative;
}

.activityStreamCommentAvatarImg
{
	left: 0;
	position: absolute;
	top: 1px;
	width: 25px;
}

.activityStreamTopEntryAvatarImg
{
	left: 2px;
	position: absolute;
	top: 1px;
	width: 40px;
}

.activityStreamCommentHeader
{
	border-top: 0px solid #d2d5d1;
	font-size: 13px;
	line-height: 15px;
	margin-left: 35px;
	padding-right: 25px;
}

.activityStreamTopEntryHeader
{
	background: #ededed;
	border-top: 1px solid #d2d5d1;
	padding-right: 65px;
	padding-left: 55px;
	-moz-border-radius-bottomleft: 3px;
	-moz-border-radius-bottomright: 3px;
	-webkit-border-bottom-left-radius: 3px;
	-webkit-border-bottom-right-radius: 3px;
}

.activityStreamCommentContentPanel
{
	font-size: 12px;
	height: 2.7em;
	margin-left: 35px;
	overflow: hidden;
	white-space: normal;
}

.activityStreamTopEntryContentPanel
{
	font-size: 13px;
	height: 4.65em;
	margin-top: 5px;
	margin-left: 55px;
	overflow: hidden;
	white-space: normal;
}

.activityStreamTopEntryTitlePanel
{
	padding-bottom: 4px;
	padding-right: 10px;
	padding-top: 4px;
}

.activityStreamCommentTitlePanel
{
	padding-bottom: 4px;
	padding-right: 30px;
	padding-top: 4px;
}

.activityStreamTopEntryTitle
{
	color: #135c8f;
	font-size: 14px;
	line-height: 15px;
}

.activityStreamCommentTitle
{
	color: #135c8f;
	font-size: 14px;
	line-height: 15px;
}

.activityStreamTopEntryBinderName
{
	color: #666666 !important;
	font-size: 10px;
	white-space: nowrap;
}

.activityStreamPresencePanel
{
	display: none;
	vertical-align: top;
}

.activityStreamNumCommentsLabel
{
	font-size: 10px;
	white-space: nowrap;
	margin-left: 5px;
	margin-right: 5px;
}

.activityStreamReply
{
	background-color: #F6F6F6;
	border: 1px solid #C4C4C4;
	left: 50px;
	margin-bottom: 10px;
	margin-top: .5em;
	padding: 5px;
	position: relative;
	width: 450px;
}

.activityStreamReplyTitlePanel, .shareThisTitlePanel
{
	padding-bottom: 5px;
}

.activityStreamReplyTitleTextBox, .shareThisTitleTextBox
{
	background-color: transparent;
	border: 0 none;
	color: #353838;
	font-family: Arial,Helvetica,sans-serif;
	font-size: 12px;
	font-weight: bold;
	width: 440px;
}

.activityStreamReplyTextArea, .shareThisTextArea
{
	background-color: transparent;
	border: 0 none;
	color: #353838;
	font-family: Arial,Helvetica,sans-serif;
	font-size: 14px;
	height: 100px;
	padding: 5px;
	resize: none;
	width: 440px;
}

.activityStreamReplyFooter
{
	margin-bottom: 5px;
	margin-top: .5em;
	text-align: right;
	width: 450px;
}

.activityStreamReplyBtn
{
	background: #949494 none repeat scroll 0 0;
	color: #FFFFFF;
	cursor: pointer;
	font-size: 12px;
	margin-right: 3px;
	padding: 2px 10px;
}

.shareThisRecipientTablePanel
{
	width: 315px;
}

.shareThisRecipientTablePanelHeight, .shareThisMyTeamsPanelHeight
{
	height: 100px;
	overflow: auto;
}

.shareThisRecipientTable
{
	width: 100%;
}

.shareThisTextAreaBorder
{
	border-color: #BABDB6;
	border-style: solid solid solid;
	border-width: 1px;
}

.shareThisCommentsLabel, .shareThisShareWithTeamsLabel, .groupMembershipGroupNameLabel
{
	font-size: 12px;
	font-weight: bold;
	padding-top: 8px;
}

.shareThisShareWithTeamsPanel
{
	padding-top: 10px;
}

.unreadEntry
{
	font-weight: bold;
	font-size: 13px;
}

.readEntry
{
}

.unreadImg
{
	cursor: pointer;
	padding-right: 2px;
	vertical-align: middle;
}

.groupMembershipPopup
{
	font-size: 14px;
	background-color: #EBECA5;
	border-color: #BABDB6;
	border-style: solid solid solid;
	border-width: 1px;
	padding: 5px 10px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	z-index: 1100;
}

.closeGroupMembershipPopupImg
{
	cursor: pointer;
	position: absolute;
	right: 10px;
	top: 5px;
}

.groupMembershipTablePanel
{
	width: 315px;
}

.groupMembershipTablePanelHeight
{
	height: 150px;
	overflow: auto;
}

.groupMembershipTable
{
	width: 100%;
}

.displayInline
{
	display: inline;
}

.level1Comment
{
	margin-left: 40px;
}

.verticalAlignTop
{
	vertical-align: top;
}

/* The following two styles are used to prevent an entry's description from starting */
/* on a new line in the activity stream control. */
.activityStreamEntryDesc > p
{
	margin: 0px;
	padding-right: 3px;
}

.activityStreamEntryDesc > div
{
	margin: 0px;
	padding-right: 3px;
}

/* ########################################################################################################### */

/* general styles to override the GWT standard.css file */

a, a:visited, a:hover {
	color: #135c8f !important;
	}
/* ... */

